--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preload" href="assets/i18n/en.json" as="fetch" crossorigin="anonymous" />
+    <!-- Content Security Policy -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' https://www.googletagmanager.com;
+      style-src 'self' 'unsafe-inline';
+      img-src 'self' data: https:;
+      font-src 'self' data:;
+      connect-src 'self'
+        https://api.github.com
+        https://formspree.io
+        https://www.google-analytics.com;
+      frame-src 'self' https://docs.google.com;
+      object-src 'none';
+      base-uri 'self';
+      form-action 'self' https://formspree.io;
+    "
+    />
   </head>
 
   <body>
